@@ -1,3 +1,8 @@
+2010-06-02  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/misc.c (need_fill_border): The fillstyle border color was not
+	taking account of linetype redefinitions.
+	
 2010-05-30  Ethan A Merritt  <merritt@u.washington.edu>
 	
 	* docs/gnuplot.doc:  Document recently added %s time format
